<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_screen"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/timetable_screen"
            android:icon="@drawable/ic_timetable"
            android:title="@string/menu_timetable" />
        <item
            android:id="@+id/Feedback_screen"
            android:icon="@drawable/ic_attendance"
            android:title="@string/menu_attendance" />
    </group>

    <item android:title="Option">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
