<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questions">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/Q1"
                android:textSize="20sp"/>
            <RadioGroup
                android:id="@+id/RG1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q1">
                <RadioButton
                    android:id="@+id/Q1_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q1"
                    />
                <RadioButton
                    android:id="@+id/Q1_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q1_option1"
                    />
                <RadioButton
                    android:id="@+id/Q1_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q1_option2"
                    />
                <RadioButton
                    android:id="@+id/Q1_option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q1_option3"
                    />
                <RadioButton
                    android:id="@+id/Q1_option5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q1_option4"
                    />
            </RadioGroup>
            <TextView
                android:id="@+id/Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/RG1"
                android:text="@string/Q2"
                android:textSize="20sp"
                />
            <RadioGroup
                android:id="@+id/RG2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q2">
                <RadioButton
                    android:id="@+id/Q2_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q2"
                    />
                <RadioButton
                    android:id="@+id/Q2_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q2_option1"
                    />
                <RadioButton
                    android:id="@+id/Q2_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q2_option2"
                    />
                <RadioButton
                    android:id="@+id/Q2_option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q2_option3"
                    />
                <RadioButton
                    android:id="@+id/Q2_option5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q2_option4"
                    />
            </RadioGroup>
            <TextView
                android:id="@+id/Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/RG2"
                android:text="@string/Q2"
                android:textSize="20sp"
                />
            <RadioGroup
                android:id="@+id/RG3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Q3">
                <RadioButton
                    android:id="@+id/Q3_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q3"
                    />
                <RadioButton
                    android:id="@+id/Q3_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q3_option1"
                    />
                <RadioButton
                    android:id="@+id/Q3_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q3_option2"
                    />
                <RadioButton
                    android:id="@+id/Q3_option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q3_option3"
                    />
                <RadioButton
                    android:id="@+id/Q3_option5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five"
                    android:padding="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/Q3_option4"
                    />
            </RadioGroup>
            <Button
                android:id="@+id/submit_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:layout_below="@id/RG3"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </ScrollView>

</FrameLayout>